# server/service/role.go
@@ -14,16 +14,16 @@ import (
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: CreateAuthority
 //@description: 创建一个角色
-//@param: auth model.SysAuthority
-//@return: err error, authority model.SysAuthority
+//@param: auth model.Role
+//@return: err error, authority model.Role
 
 type AuthorityService struct {
 }
 
 var AuthorityServiceApp = new(AuthorityService)
 
-func (authorityService *AuthorityService) CreateAuthority(auth system.SysAuthority) (err error, authority system.SysAuthority) {
-	var authorityBox system.SysAuthority
+func (authorityService *AuthorityService) CreateAuthority(auth system.Role) (err error, authority system.Role) {
+	var authorityBox system.Role
 	if !errors.Is(zvar.DB.Where("authority_id = ?", auth.AuthorityId).First(&authorityBox).Error, gorm.ErrRecordNotFound) {
 		return errors.New("存在相同角色id"), auth
 	}
@@ -34,15 +34,15 @@ func (authorityService *AuthorityService) CreateAuthority(auth system.SysAuthori
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: CopyAuthority
 //@description: 复制一个角色
-//@param: copyInfo response.SysAuthorityCopyResponse
-//@return: err error, authority model.SysAuthority
+//@param: copyInfo response.RoleCopyResponse
+//@return: err error, authority model.Role
 
-func (authorityService *AuthorityService) CopyAuthority(copyInfo response.SysAuthorityCopyResponse) (err error, authority system.SysAuthority) {
-	var authorityBox system.SysAuthority
+func (authorityService *AuthorityService) CopyAuthority(copyInfo response.RoleCopyResponse) (err error, authority system.Role) {
+	var authorityBox system.Role
 	if !errors.Is(zvar.DB.Where("authority_id = ?", copyInfo.Authority.AuthorityId).First(&authorityBox).Error, gorm.ErrRecordNotFound) {
 		return errors.New("存在相同角色id"), authority
 	}
-	copyInfo.Authority.Children = []system.SysAuthority{}
+	copyInfo.Authority.Children = []system.Role{}
 	err, menus := MenuServiceApp.GetMenuAuthority(&request.GetAuthorityId{AuthorityId: copyInfo.OldAuthorityId})
 	var baseMenu []system.SysBaseMenu
 	for _, v := range menus {
@@ -53,8 +53,8 @@ func (authorityService *AuthorityService) CopyAuthority(copyInfo response.SysAut
 	copyInfo.Authority.SysBaseMenus = baseMenu
 	err = zvar.DB.Create(&copyInfo.Authority).Error
 
-	paths := CasbinServiceApp.GetPolicyPathByAuthorityId(copyInfo.OldAuthorityId)
-	err = CasbinServiceApp.UpdateCasbin(copyInfo.Authority.AuthorityId, paths)
+	paths := (&CasbinService{}).GetPermByRoleId(copyInfo.OldAuthorityId)
+	err = (&CasbinService{}).Update(copyInfo.Authority.AuthorityId, paths)
 	if err != nil {
 		_ = authorityService.DeleteAuthority(&copyInfo.Authority)
 	}
@@ -64,25 +64,25 @@ func (authorityService *AuthorityService) CopyAuthority(copyInfo response.SysAut
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: UpdateAuthority
 //@description: 更改一个角色
-//@param: auth model.SysAuthority
-//@return: err error, authority model.SysAuthority
+//@param: auth model.Role
+//@return: err error, authority model.Role
 
-func (authorityService *AuthorityService) UpdateAuthority(auth system.SysAuthority) (err error, authority system.SysAuthority) {
-	err = zvar.DB.Where("authority_id = ?", auth.AuthorityId).First(&system.SysAuthority{}).Updates(&auth).Error
+func (authorityService *AuthorityService) UpdateAuthority(auth system.Role) (err error, authority system.Role) {
+	err = zvar.DB.Where("authority_id = ?", auth.AuthorityId).First(&system.Role{}).Updates(&auth).Error
 	return err, auth
 }
 
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: DeleteAuthority
 //@description: 删除角色
-//@param: auth *model.SysAuthority
+//@param: auth *model.Role
 //@return: err error
 
-func (authorityService *AuthorityService) DeleteAuthority(auth *system.SysAuthority) (err error) {
+func (authorityService *AuthorityService) DeleteAuthority(auth *system.Role) (err error) {
 	if !errors.Is(zvar.DB.Where("authority_id = ?", auth.AuthorityId).First(&system.SysUser{}).Error, gorm.ErrRecordNotFound) {
 		return errors.New("此角色有用户正在使用禁止删除")
 	}
-	if !errors.Is(zvar.DB.Where("parent_id = ?", auth.AuthorityId).First(&system.SysAuthority{}).Error, gorm.ErrRecordNotFound) {
+	if !errors.Is(zvar.DB.Where("parent_id = ?", auth.AuthorityId).First(&system.Role{}).Error, gorm.ErrRecordNotFound) {
 		return errors.New("此角色存在子角色不允许删除")
 	}
 	db := zvar.DB.Preload("SysBaseMenus").Where("authority_id = ?", auth.AuthorityId).First(auth)
@@ -93,7 +93,7 @@ func (authorityService *AuthorityService) DeleteAuthority(auth *system.SysAuthor
 	} else {
 		err = db.Error
 	}
-	CasbinServiceApp.ClearCasbin(0, auth.AuthorityId)
+	(&CasbinService{}).ClearCasbin(0, auth.AuthorityId)
 	return err
 }
 
@@ -107,7 +107,7 @@ func (authorityService *AuthorityService) GetAuthorityInfoList(info request.Page
 	limit := info.PageSize
 	offset := info.PageSize * (info.Page - 1)
 	db := zvar.DB
-	var authority []system.SysAuthority
+	var authority []system.Role
 	err = db.Limit(limit).Offset(offset).Preload("DataAuthorityId").Where("parent_id = 0").Find(&authority).Error
 	if len(authority) > 0 {
 		for k := range authority {
@@ -120,10 +120,10 @@ func (authorityService *AuthorityService) GetAuthorityInfoList(info request.Page
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: GetAuthorityInfo
 //@description: 获取所有角色信息
-//@param: auth model.SysAuthority
-//@return: err error, sa model.SysAuthority
+//@param: auth model.Role
+//@return: err error, sa model.Role
 
-func (authorityService *AuthorityService) GetAuthorityInfo(auth system.SysAuthority) (err error, sa system.SysAuthority) {
+func (authorityService *AuthorityService) GetAuthorityInfo(auth system.Role) (err error, sa system.Role) {
 	err = zvar.DB.Preload("DataAuthorityId").Where("authority_id = ?", auth.AuthorityId).First(&sa).Error
 	return err, sa
 }
@@ -131,11 +131,11 @@ func (authorityService *AuthorityService) GetAuthorityInfo(auth system.SysAuthor
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: SetDataAuthority
 //@description: 设置角色资源权限
-//@param: auth model.SysAuthority
+//@param: auth model.Role
 //@return: error
 
-func (authorityService *AuthorityService) SetDataAuthority(auth system.SysAuthority) error {
-	var s system.SysAuthority
+func (authorityService *AuthorityService) SetDataAuthority(auth system.Role) error {
+	var s system.Role
 	zvar.DB.Preload("DataAuthorityId").First(&s, "authority_id = ?", auth.AuthorityId)
 	err := zvar.DB.Model(&s).Association("DataAuthorityId").Replace(&auth.DataAuthorityId)
 	return err
@@ -144,11 +144,11 @@ func (authorityService *AuthorityService) SetDataAuthority(auth system.SysAuthor
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: SetMenuAuthority
 //@description: 菜单与角色绑定
-//@param: auth *model.SysAuthority
+//@param: auth *model.Role
 //@return: error
 
-func (authorityService *AuthorityService) SetMenuAuthority(auth *system.SysAuthority) error {
-	var s system.SysAuthority
+func (authorityService *AuthorityService) SetMenuAuthority(auth *system.Role) error {
+	var s system.Role
 	zvar.DB.Preload("SysBaseMenus").First(&s, "authority_id = ?", auth.AuthorityId)
 	err := zvar.DB.Model(&s).Association("SysBaseMenus").Replace(&auth.SysBaseMenus)
 	return err
@@ -157,10 +157,10 @@ func (authorityService *AuthorityService) SetMenuAuthority(auth *system.SysAutho
 //@author: [piexlmax](https://github.com/piexlmax)
 //@function: findChildrenAuthority
 //@description: 查询子角色
-//@param: authority *model.SysAuthority
+//@param: authority *model.Role
 //@return: err error
 
-func (authorityService *AuthorityService) findChildrenAuthority(authority *system.SysAuthority) (err error) {
+func (authorityService *AuthorityService) findChildrenAuthority(authority *system.Role) (err error) {
 	err = zvar.DB.Preload("DataAuthorityId").Where("parent_id = ?", authority.AuthorityId).Find(&authority.Children).Error
 	if len(authority.Children) > 0 {
 		for k := range authority.Children {
